feat: Implement initial application configuration, security setup, CORS handling, and demo data seeding.